feat: implement task and user context setup with CRUD operations and authentication redirect
- Created `TasksContext` to manage tasks with CRUD operations (create, read, update, delete) using axios for API requests.
- Added loading states and priority filter support for better task management.
- Implemented `useRedirect` hook for redirecting users based on authentication status.
- Wrapped `UserProvider` to include both `UserContextProvider` and `TasksProvider` for organized context management.
- Corrected task deletion and update logic to use `_id` for accurate task manipulation.
- Minor fixes and refactoring for improved readability and error handling.

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -28,6 +28,10 @@ form > img {
   object-fit: cover;
 }
 
+.main-layout::-webkit-scrollbar{
+  width: 2px;
+}
+
 /* Utilities styles */
 
 .u-triangle::before{
