--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -12,12 +12,12 @@ body{
   background: url("../public/glass-bg.png") no-repeat center center fixed;
 }
 
-form {
+.auth-page form {
   position: relative;
   box-shadow: 2px 3px 15px rgba(0, 0, 0, 0.08);
 }
 
-form > img {
+.auth-page  img {
   position: absolute;
   top: 0;
   left: 0;
